# TheModel

./: .gitignore  MANIFEST.in  pyproject.toml  readme.md  setup.py
src/themodel/: .gitignore  __init__.py  alternative.py  colorize.py  components.py  config.py  dataset.py  discriminator.py  generator.py  interface.py  losses.py  model.py  newtrain.py  normalizer.py  ogenerator.py  preprocess.py  train.py  utils.py
src/themodel/data/: __init__.py  image_folder.py  single_dataset.py
src/themodel/models/: __init__.py  base_model.py  cycle_gan_model.py  test_model.py
src/themodel/options/: base_options.py  test_options.py
