[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "themodel"
version = "1.0.0"
description = "A python package that takes your boring b&W manga and colorises it."

requires-python = ">=3.10, <=3.11"
dependencies = [
    "torch  --index-url https://download.pytorch.org/whl/cu121",
    "torchvision --index-url https://download.pytorch.org/whl/cu121",
    "matplotlib",
]