[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "themodel"
version = "2.0.10"
description = "A python package that takes your boring b&W manga and colorises it."

requires-python = ">=3.10, <3.12"
dependencies = [
	"torch",
	"torchvision",
    "matplotlib",
    "pydantic",
    "pydantic_settings",
    "tqdm"
]