[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
 include_package_data = true

[project]
name = "themodel"
version = "3.0.1"
description = "A python package that takes your boring b&W manga and colorises it."

requires-python = ">=3.10, <3.12"
dependencies = [
"beautifulsoup4==4.12.3",
"certifi==2024.2.2",
"charset-normalizer==3.3.2",
"dominate==2.9.1",
"filelock==3.13.1",
"fsspec==2024.2.0",
"idna==3.6",
"imageio==2.33.1",
"Jinja2==3.1.3",
"lazy_loader==0.3",
"MarkupSafe==2.1.5",
"mpmath==1.3.0",
"networkx==3.2.1",
"numpy==1.26.4",
"packaging==23.2",
"pillow==10.2.0",
"requests==2.31.0",
"scikit-image==0.22.0",
"scipy==1.12.0",
"soupsieve==2.5",
"sympy==1.12",
"tifffile==2024.1.30",
"torch==2.2.0",
"torchvision==0.17.0",
"typing_extensions==4.9.0",
"urllib3==2.2.0",
]
